tests/golden/invalid/tabs-spaces.rego
# This test really just ensures that we print the "^^^^^" 
package fregot.tests.invalid.tabs_spaces

test_tab {
	1 > "what?"
}

test_spaces {
    1 > "what?"
}

test_mixed_01 {
	 	  1 > "what?"
}
