tests/golden/invalid/tabs-spaces.rego.stderr
fregot (typecheck error):
  "tabs-spaces.rego" (line 5, column 9):
  Unification error:

    5| 	1 > "what?"
       	^^^^^^^^^^^

  Could not unify type number with string

fregot (typecheck error):
  "tabs-spaces.rego" (line 9, column 5):
  Unification error:

    9|     1 > "what?"
           ^^^^^^^^^^^

  Could not unify type number with string

fregot (typecheck error):
  "tabs-spaces.rego" (line 13, column 19):
  Unification error:

    13| 	 	  1 > "what?"
        	 	  ^^^^^^^^^^^

  Could not unify type number with string
